demo/nakama/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: conference
  labels:
    namespace: conference
