demo/nakama/02-services.yml
apiVersion: v1
kind: Service
metadata:
  namespace: conference
  name: database
  labels:
    service: database
spec:
  clusterIP: "None"
  ports:
  - port: 26257
    targetPort: 26257
    name: database-grpc
  - port: 8080
    targetPort: 8080
    name: database-http
  selector:
    app: database
---
apiVersion: v1
kind: Service
metadata:
  namespace: conference
  name: nakama
  labels:
    service: nakama
spec:
  selector:
    app: nakama
  type: LoadBalancer
  ports:
  - port: 7350
    targetPort: 7350
    name: nakama-api
