demo/nakama/05-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: conference
  name: nakama
  labels:
    ingress: nakama
  annotations:
    kubernetes.io/ingress.allow-http: "true"
spec:
  backend:
    serviceName: nakama
    servicePort: 7350
